constraint/constraintParser.java
// Generated from constraint.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class constraintParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__12=1, T__11=2, T__10=3, T__9=4, T__8=5, T__7=6, T__6=7, T__5=8, T__4=9, 
		T__3=10, T__2=11, T__1=12, T__0=13, LET=14, APP=15, UNION=16, ASSERT=17, 
		EITHER=18, PERM=19, LIMITING=20, ACTION=21, OWN_FLOWS=22, OTHERS_FLOWS=23, 
		ALL_FLOWS=24, MAX_PRIORITY=25, EVENT_INTERCEPTION=26, MODIFY_EVENT_ORDER=27, 
		FLOW_LEVEL=28, PORT_LEVEL=29, SWITCH_LEVEL=30, IP_SRC=31, IP_DST=32, TCP_SRC=33, 
		TCP_DST=34, VLAN_ID=35, INT=36, FLOAT=37, IP=38, WITH=39, MASK=40, IP_FORMAT=41, 
		SWITCH=42, LINK=43, ALL_SWITCHES=44, BORDER_SWITCHES=45, ALL_DIRECT_LINKS=46, 
		ALL_PATHS_AS_LINKS=47, VIRTUAL=48, SINGLE_BIG_SWITCH=49, DROP=50, FORWARD=51, 
		MODIFY=52, FIELD=53, AND=54, OR=55, NOT=56, AS=57, RULE_COUNT_PER_SWITCH=58, 
		SIZE_PERCENTAGE_PER_SWITCH=59, STRING=60, WS=61;
	public static final String[] tokenNames = {
		"<INVALID>", "')'", "','", "'-'", "'('", "':'", "'<'", "'='", "';'", "'<='", 
		"'>'", "'{'", "'>='", "'}'", "'LET'", "'APP'", "'UNION'", "'ASSERT'", 
		"'EITHER'", "'PERM'", "'LIMITING'", "'ACTION'", "'OWN_FLOWS'", "'OTHERS_FLOWS'", 
		"'ALL_FLOWS'", "'MAX_PRIORITY'", "'EVENT_INTERCEPTION'", "'MODIFY_EVENT_ORDER'", 
		"'FLOW_LEVEL'", "'PORT_LEVEL'", "'SWITCH_LEVEL'", "'IP_SRC'", "'IP_DST'", 
		"'TCP_SRC'", "'TCP_DST'", "'VLAN_ID'", "INT", "FLOAT", "'IP'", "'WITH'", 
		"'MASK'", "IP_FORMAT", "'SWITCH'", "'LINK'", "'ALL_SWITCHES'", "'BORDER_SWITCHES'", 
		"'ALL_DIRECT_LINKS'", "'ALL_PATHS_AS_LINKS'", "'VIRTUAL'", "'SINGLE_BIG_SWITCH'", 
		"'DROP'", "'FORWARD'", "'MODIFY'", "'FIELD'", "'AND'", "'OR'", "'NOT'", 
		"'AS'", "'RULE_COUNT_PER_SWITCH'", "'SIZE_PERCENTAGE_PER_SWITCH'", "STRING", 
		"WS"
	};
	public static final int
		RULE_program = 0, RULE_binding = 1, RULE_var_perm = 2, RULE_app_name = 3, 
		RULE_perm_expr = 4, RULE_assert_list = 5, RULE_assert_stmt = 6, RULE_assert_expr = 7, 
		RULE_boolean_expr = 8, RULE_cmp_operator = 9, RULE_exclusive = 10, RULE_perm_list = 11, 
		RULE_perm = 12, RULE_filter_expr = 13, RULE_filter_term = 14, RULE_filter_factor = 15, 
		RULE_filter_not_factor = 16, RULE_flow_predicate = 17, RULE_field = 18, 
		RULE_value_list = 19, RULE_value_range = 20, RULE_ip_range = 21, RULE_ip_format = 22, 
		RULE_topo = 23, RULE_physical_topo = 24, RULE_switch_set = 25, RULE_sw_idx_list = 26, 
		RULE_sw_idx = 27, RULE_link_set = 28, RULE_link_list = 29, RULE_link = 30, 
		RULE_path = 31, RULE_link_idx = 32, RULE_virtual_topo = 33, RULE_switch_mapping = 34, 
		RULE_virtual_switch_set = 35, RULE_action = 36, RULE_field_list = 37, 
		RULE_ownership = 38, RULE_max_priority = 39, RULE_flow_table = 40, RULE_notification = 41, 
		RULE_statistics = 42, RULE_perm_name = 43;
	public static final String[] ruleNames = {
		"program", "binding", "var_perm", "app_name", "perm_expr", "assert_list", 
		"assert_stmt", "assert_expr", "boolean_expr", "cmp_operator", "exclusive", 
		"perm_list", "perm", "filter_expr", "filter_term", "filter_factor", "filter_not_factor", 
		"flow_predicate", "field", "value_list", "value_range", "ip_range", "ip_format", 
		"topo", "physical_topo", "switch_set", "sw_idx_list", "sw_idx", "link_set", 
		"link_list", "link", "path", "link_idx", "virtual_topo", "switch_mapping", 
		"virtual_switch_set", "action", "field_list", "ownership", "max_priority", 
		"flow_table", "notification", "statistics", "perm_name"
	};

	@Override
	public String getGrammarFileName() { return "constraint.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public constraintParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Assert_list_Context extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public Assert_listContext assert_list() {
			return getRuleContext(Assert_listContext.class,0);
		}
		public Assert_list_Context(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterAssert_list_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitAssert_list_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitAssert_list_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Bind_Context extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public BindingContext binding() {
			return getRuleContext(BindingContext.class,0);
		}
		public Bind_Context(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterBind_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitBind_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitBind_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EmptyContext extends ProgramContext {
		public EmptyContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(95);
			switch (_input.LA(1)) {
			case LET:
				_localctx = new Bind_Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88); binding();
				setState(89); program();
				}
				break;
			case ASSERT:
				_localctx = new Assert_list_Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91); assert_list();
				setState(92); program();
				}
				break;
			case 8:
				_localctx = new EmptyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(94); match(8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BindingContext extends ParserRuleContext {
		public BindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binding; }
	 
		public BindingContext() { }
		public void copyFrom(BindingContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Bind_exprContext extends BindingContext {
		public Var_permContext var_perm() {
			return getRuleContext(Var_permContext.class,0);
		}
		public Perm_exprContext perm_expr() {
			return getRuleContext(Perm_exprContext.class,0);
		}
		public TerminalNode LET() { return getToken(constraintParser.LET, 0); }
		public Bind_exprContext(BindingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterBind_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitBind_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitBind_expr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Bind_listContext extends BindingContext {
		public Var_permContext var_perm() {
			return getRuleContext(Var_permContext.class,0);
		}
		public Perm_listContext perm_list() {
			return getRuleContext(Perm_listContext.class,0);
		}
		public TerminalNode LET() { return getToken(constraintParser.LET, 0); }
		public Bind_listContext(BindingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterBind_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitBind_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitBind_list(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Bind_appContext extends BindingContext {
		public TerminalNode APP() { return getToken(constraintParser.APP, 0); }
		public Var_permContext var_perm() {
			return getRuleContext(Var_permContext.class,0);
		}
		public TerminalNode LET() { return getToken(constraintParser.LET, 0); }
		public App_nameContext app_name() {
			return getRuleContext(App_nameContext.class,0);
		}
		public Bind_appContext(BindingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterBind_app(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitBind_app(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitBind_app(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BindingContext binding() throws RecognitionException {
		BindingContext _localctx = new BindingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_binding);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Bind_listContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(97); match(LET);
				setState(98); var_perm();
				setState(99); match(7);
				setState(100); match(11);
				setState(101); perm_list();
				setState(102); match(13);
				}
				break;

			case 2:
				_localctx = new Bind_appContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(104); match(LET);
				setState(105); var_perm();
				setState(106); match(7);
				setState(107); match(APP);
				setState(108); app_name();
				}
				break;

			case 3:
				_localctx = new Bind_exprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(110); match(LET);
				setState(111); var_perm();
				setState(112); match(7);
				setState(113); perm_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_permContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(constraintParser.STRING, 0); }
		public Var_permContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_perm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterVar_perm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitVar_perm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitVar_perm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_permContext var_perm() throws RecognitionException {
		Var_permContext _localctx = new Var_permContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_perm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class App_nameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(constraintParser.STRING, 0); }
		public App_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_app_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterApp_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitApp_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitApp_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final App_nameContext app_name() throws RecognitionException {
		App_nameContext _localctx = new App_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_app_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Perm_exprContext extends ParserRuleContext {
		public Perm_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_perm_expr; }
	 
		public Perm_exprContext() { }
		public void copyFrom(Perm_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Perm_expr_unionContext extends Perm_exprContext {
		public Var_permContext var_perm() {
			return getRuleContext(Var_permContext.class,0);
		}
		public Perm_exprContext perm_expr() {
			return getRuleContext(Perm_exprContext.class,0);
		}
		public TerminalNode UNION() { return getToken(constraintParser.UNION, 0); }
		public Perm_expr_unionContext(Perm_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterPerm_expr_union(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitPerm_expr_union(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitPerm_expr_union(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Perm_expr__woContext extends Perm_exprContext {
		public Var_permContext var_perm() {
			return getRuleContext(Var_permContext.class,0);
		}
		public Perm_expr__woContext(Perm_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterPerm_expr__wo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitPerm_expr__wo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitPerm_expr__wo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Perm_exprContext perm_expr() throws RecognitionException {
		Perm_exprContext _localctx = new Perm_exprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_perm_expr);
		try {
			setState(126);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Perm_expr__woContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(121); var_perm();
				}
				break;

			case 2:
				_localctx = new Perm_expr_unionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(122); var_perm();
				setState(123); match(UNION);
				setState(124); perm_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assert_listContext extends ParserRuleContext {
		public Assert_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assert_list; }
	 
		public Assert_listContext() { }
		public void copyFrom(Assert_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Assert_stmt__woContext extends Assert_listContext {
		public Assert_stmtContext assert_stmt() {
			return getRuleContext(Assert_stmtContext.class,0);
		}
		public Assert_stmt__woContext(Assert_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterAssert_stmt__wo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitAssert_stmt__wo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitAssert_stmt__wo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Assert_stmt__wContext extends Assert_listContext {
		public Assert_listContext assert_list() {
			return getRuleContext(Assert_listContext.class,0);
		}
		public Assert_stmtContext assert_stmt() {
			return getRuleContext(Assert_stmtContext.class,0);
		}
		public Assert_stmt__wContext(Assert_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterAssert_stmt__w(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitAssert_stmt__w(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitAssert_stmt__w(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assert_listContext assert_list() throws RecognitionException {
		Assert_listContext _localctx = new Assert_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assert_list);
		try {
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Assert_stmt__woContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(128); assert_stmt();
				}
				break;

			case 2:
				_localctx = new Assert_stmt__wContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129); assert_stmt();
				setState(130); assert_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assert_stmtContext extends ParserRuleContext {
		public Assert_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assert_stmt; }
	 
		public Assert_stmtContext() { }
		public void copyFrom(Assert_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Assert_st_exprContext extends Assert_stmtContext {
		public Assert_exprContext assert_expr() {
			return getRuleContext(Assert_exprContext.class,0);
		}
		public TerminalNode ASSERT() { return getToken(constraintParser.ASSERT, 0); }
		public Assert_st_exprContext(Assert_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterAssert_st_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitAssert_st_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitAssert_st_expr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Assert_st_excContext extends Assert_stmtContext {
		public ExclusiveContext exclusive() {
			return getRuleContext(ExclusiveContext.class,0);
		}
		public TerminalNode ASSERT() { return getToken(constraintParser.ASSERT, 0); }
		public Assert_st_excContext(Assert_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).enterAssert_st_exc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof constraintListener ) ((constraintListener)listener).exitAssert_st_exc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof constraintVisitor ) return ((constraintVisitor<? extends T>)visitor).visitAssert_st_exc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assert_stmtContext assert_stmt() throws RecognitionException {
		Assert_stmtContext _localctx = new Assert_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assert_stmt);
		try {
			setState(138);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new Assert_st_exprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(134); match(ASSERT);
				setState(135); assert_expr();
				}
				break;

			case 2:
				_localctx = new Assert_st_excContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(136); match(ASSERT);
				setState(137); exclusive();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
